--- a/eMovieTickets/Views/Orders/Index.cshtml
+++ b/eMovieTickets/Views/Orders/Index.cshtml
@@ -14,7 +14,7 @@
             <thead>
                 <tr>
                     <th>Order ID</th>
-                    <td>Items</td>
+                    <th>Items</th>
                     <td>Total</td>
                     <th>User</th>
                 </tr>
