--- a/eMovieTickets/Views/Orders/ShoppingCart.cshtml
+++ b/eMovieTickets/Views/Orders/ShoppingCart.cshtml
@@ -28,7 +28,7 @@
                         <td class="align-middle">@item.Amount</td>
                         <td class="align-middle">@item.Movie.Name</td>
                         <td class="align-middle">@item.Movie.Price.ToString("c")</td>
-                        <td class="align-middle">@((item.Amount*item.Movie.Price).ToString("c"))</td>
+                        <td class="align-middle">@((item.Amount * item.Movie.Price).ToString("c"))</td>
                         <td class="align-middle">
                             <a class="text-danger" asp-controller="Orders" asp-action="RemoveItemFromShoppingcart" asp-route-id="@item.Movie.Id">
                                 <i class="bi bi-cart-dash"></i>
@@ -53,11 +53,13 @@
             </tfoot>
         </table>
 
-        <div class="text-center">
+        <div class="text-end">
             <div class="btn-group">
-                <a class="btn btn-outline-primary" asp-action="CompleteOrder">
-                    Complete Order
-                </a>
+                @*<a class="btn btn-outline-primary" asp-action="CompleteOrder">
+                Complete Order
+                </a>*@
+                <div id="paypal-btn"></div>
+                <span style="padding: 5px"></span>
                 <a class="btn btn-outline-success" asp-controller="Movies" asp-action="Index">
                     Add more Items
                 </a>
@@ -66,3 +68,74 @@
         </div>
     </div>
 </div>
+
+@*@section Script{
+    <script src="https://www.paypal.com/sdk/js?client-id=ARU5mvTiP2T8hH6XbwcfaofeM0XG_4xDOaHc_sG1-BZMBWXASupyqMT4cZzWb0jGBne3fHAXDMj7OnqN"></script>
+
+    <script>
+        paypal.Buttons({
+            createOrder: function (data, actions) {
+                return actions.order.create({
+                    purchase_units: [{
+                        amount: {
+                            value: '10.00' // Replace with the actual amount
+                        }
+                    }]
+                });
+            },
+            onApprove: function (data, actions) {
+                return actions.order.capture().then(function (details) {
+                    console.log(details);
+                    // Handle successful payment completion here
+                });
+            }
+        }).render('#paypal-btn');
+    </script>
+}
+*@
+
+@section Scripts{
+
+    <script src="https://www.paypalobjects.com/api/checkout.js"></script>
+
+    <script>
+        let _total = @Html.Raw(Model.ShoppingCartTotal);
+        paypal.Button.render({
+            //Configure environment
+            env: 'sandbox',
+            client: {
+                sandbox: 'ARU5mvTiP2T8hH6XbwcfaofeM0XG_4xDOaHc_sG1-BZMBWXASupyqMT4cZzWb0jGBne3fHAXDMj7OnqN'
+            },
+
+            //Customize button
+            locale: 'en_US',
+            style: {
+                size: 'small',
+                color: 'gold',
+                shape: 'pill'
+            },
+            commit: true,
+
+            //Set up a payment
+            payment: function (data, actions) {
+                return actions.payment.create({
+                    transactions: [{
+                        amount: {
+                            total: _total,
+                            currency: 'CAD'
+                        }
+                    }]
+                });
+            },
+
+            //Execute the payment
+            onAuthorize: function (data, actions) {
+                return actions.payment.execute().then(function () {
+                    var url = '@Url.Action("CompleteOrder", "Orders", new { })';
+                    window.location.href = url;
+                });
+            }
+
+        }, '#paypal-btn')
+    </script>
+}
