--- a/eMovieTickets/Views/Orders/Index.cshtml
+++ b/eMovieTickets/Views/Orders/Index.cshtml
@@ -16,7 +16,10 @@
                     <th>Order ID</th>
                     <th>Items</th>
                     <td>Total</td>
-                    <th>User</th>
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                    {
+                        <th>User</th>
+                    }
                 </tr>
             </thead>
             <tbody>
@@ -38,8 +41,11 @@
                         <td class="align-middle">
                             @order.OrderItems.Select(m=> m.Movie.Price * m.Amount).Sum().ToString("c")
                         </td>
-                        <td class="align-middle"> - </td>
-                 </tr>   
+                        @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                        {
+                            <td class="align-middle">@order.User.FullName</td>
+                        }
+                    </tr>   
                 }
             </tbody>
         </table>
